--- a/requirements.txt
+++ b/requirements.txt
@@ -90,7 +90,7 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 nested-lookup==0.2.25
 ngrok==1.4.0
-numba==0.56.4
+numba>=0.58.1
 numpy==1.26.4
 oauth2client==4.1.3
 oauthlib==3.2.2
