--- a/requirements.txt
+++ b/requirements.txt
@@ -131,7 +131,7 @@ requests-oauthlib==1.3.1
 rich==13.8.1
 rsa==4.9
 schedule==1.2.1
-scikit-learn==1.0.2
+scikit-learn>=1.3.2
 scipy==1.15.2
 scrapingbee==2.0.1
 sentencepiece==0.2.0
