--- a/requirements.txt
+++ b/requirements.txt
@@ -145,7 +145,7 @@ soupsieve==2.4.1
 soxr==0.3.7
 SQLAlchemy==2.0.23
 telegram==0.0.1
-tensorboard==2.11.2
+tensorboard>=2.14.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 threadpoolctl==3.1.0
