--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ google-api-core==2.11.0
 google-api-python-client==2.88.0
 google-auth==2.19.1
 google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.4.6
+google-auth-oauthlib>=0.5
 google-cloud-core==2.3.3
 google-cloud-storage==2.10.0
 google-crc32c==1.5.0
@@ -146,7 +146,7 @@ soxr==0.3.7
 SQLAlchemy==2.0.23
 telegram==0.0.1
 tensorboard>=2.14.0
-tensorboard-data-server==0.6.1
+tensorboard-data-server>=0.7.0
 tensorboard-plugin-wit==1.8.1
 threadpoolctl==3.1.0
 tomli==2.2.1
