--- a/render.yaml
+++ b/render.yaml
@@ -5,11 +5,13 @@ services:
     plan: free
     buildCommand: |
       apt-get update
-      apt-get install -y curl gnupg
+      apt-get install -y curl gnupg apt-transport-https
       curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
       curl https://packages.microsoft.com/config/ubuntu/20.04/prod.list > /etc/apt/sources.list.d/mssql-release.list
       apt-get update
-      ACCEPT_EULA=Y apt-get install -y msodbc17 unixodbc-dev
+      ACCEPT_EULA=Y apt-get install -y msodbcsql17 mssql-tools unixodbc-dev
+      echo 'export PATH="$PATH:/opt/mssql-tools/bin"' >> ~/.bashrc
+      source ~/.bashrc
       pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
