--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ aiohttp==3.8.6
 aiohttp-retry==2.9.1
 aiohttp-socks==0.8.4
 aiosignal==1.3.1
-annotated-types==0.5.0
+//annotated-types==0.5.0
 anyio==3.7.1
 apify-client==0.6.0
 asgiref==3.7.2
@@ -158,3 +158,5 @@ utils==1.0.1
 Werkzeug==2.2.3
 yarl==1.9.2
 zipp==3.15.0
+pymssql==2.2.5
+
