--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿absl-py==1.4.0
+﻿﻿absl-py==1.4.0
 aiodns==3.1.1
 aiohttp==3.8.6
 aiohttp-retry==2.9.1
@@ -158,4 +158,3 @@ utils==1.0.1
 Werkzeug==2.2.3
 yarl==1.9.2
 zipp==3.15.0
-
